<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="342dp"
        android:layout_height="612dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginBottom="30sp"
            android:fontFamily="@font/montserrat_bold"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/avatar"
            tools:srcCompat="@drawable/avatar" />

        <TextView
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/montserrat_medium"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lastEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/montserrat_medium"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="50sp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/montserrat_bold"
            android:onClick="LogoutClick"
            android:text="@string/logout_btn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginEnd="50sp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/montserrat_bold"
            android:onClick="RefreshClick"
            android:text="@string/refresh_btn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginEnd="50sp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/montserrat_bold"
            android:onClick="ScanClick"
            android:text="@string/scan_btn"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/main_error"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/qrScan"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>